<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Hybrid</string>
	<string name="action_bar_title">Hybrid</string>
	<string name="loading">Loading&#8230;</string>

	<!--Error, warning -->
	<string name="err_net_can_load_ext_app">Network error! Can not load other Hybrid-Apps.</string>

	<!-- External Apps -->
	<string name="extapp_title">More Apps:</string>
	<string name="extapp_download">Inst.</string>
	<string name="extapp_buy">Buy</string>
	<string name="extapp_open">Start</string>

	<!-- Sharing this app-->
	<string name="sharing_title">From %s Hybrid</string>
	<string name="sharing_this_app">When you do not like some social Apps which must read your contact list or abuse some privacy data, use %1$s-Hybrid to avoid potential risk. \n\nDownload: market://details?id=%2$s .</string>


	<!--Menu title-->
	<string name="menu_share">Share</string>
	<string name="menu_backward">Backward</string>
	<string name="menu_top">Top</string>
	<string name="menu_forward">Forward</string>

	<!--Settings-->
	<string name="settings_open">Settings</string>
	<string name="settings_category_actionbar_navi_bar">Navigation</string>
	<string name="settings_fix_bar">ActionBar while scrolling up</string>
	<string name="settings_dismiss_navi">Browser navigation</string>
	<string name="settings_fix_bar_on">Fix</string>
	<string name="settings_fix_bar_off">Not fix</string>
	<string name="settings_dismiss_navi_on">Show</string>
	<string name="settings_dismiss_navi_off">Hide</string>
</resources>
