<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:background="@color/bg_drawer"
		android:paddingTop="?attr/actionBarSize"
		android:layout_width="match_parent"
		android:layout_height="match_parent">


	<TextView
			android:layout_width="match_parent"
			style="@style/Settings.Category"
			android:layout_height="@dimen/menu_height_on_drawer"
			android:text="@string/settings_category_actionbar_navi_bar"/>

	<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/div_general"/>

	<LinearLayout
			android:layout_width="match_parent"
			android:weightSum="1"
			android:paddingLeft="@dimen/genernal_padding_margin"
			android:paddingRight="@dimen/genernal_padding_margin"
			android:layout_height="@dimen/menu_height_on_drawer">

		<TextView
				android:layout_width="0dp"
				style="@style/Settings.Category.Title"
				android:layout_height="wrap_content"
				android:layout_weight="0.8"
				android:text="@string/settings_fix_bar"/>

		<CheckBox
				android:layout_weight="0.2"
				android:layout_width="0dp"
				android:layout_height="wrap_content"/>
	</LinearLayout>


	<LinearLayout
			android:layout_width="match_parent"
			android:weightSum="1"
			android:paddingLeft="@dimen/genernal_padding_margin"
			android:paddingRight="@dimen/genernal_padding_margin"
			android:layout_height="@dimen/menu_height_on_drawer">

		<TextView
				android:layout_width="0dp"
				style="@style/Settings.Category.Title"
				android:layout_height="wrap_content"
				android:layout_weight="0.8"
				android:text="@string/settings_dismiss_navi"/>

		<CheckBox
				android:layout_weight="0.2"
				android:layout_width="0dp"
				android:layout_height="wrap_content"/>
	</LinearLayout>

</LinearLayout>